# zeta-tiger-testsuite

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  ReleaseNotes.md  pom.xml  tiger.yaml
docker/: README.md
docker/frontend/: Dockerfile  run-tests.sh
docker/quality_gate/: Dockerfile  run-tests.sh
docs/: gemSpec_ZETA_V1.2.0.html  gemVZ_Afo_ZETA_Guard_V_1.2.0_V1.0.0.xml
docs/asciidoc/: Testplan_ZETA.adoc
docs/asciidoc/afos/: readme.adoc  readme_aliases.adoc
docs/asciidoc/afos/gemKPT_Test/: A_27438.adoc
docs/asciidoc/afos/gemSpec_Krypt/: A_21275-01.adoc  GS-A_4384-03.adoc
docs/asciidoc/afos/gemSpec_ZETA/: A_25337.adoc  A_25338.adoc  A_25340.adoc  A_25432.adoc  A_25434.adoc  A_25644.adoc  A_25645.adoc  A_25652.adoc  A_25653.adoc  A_25660.adoc  A_25661.adoc  A_25662.adoc  A_25663.adoc  A_25665.adoc  A_25669.adoc  A_25738.adoc  A_25739.adoc  A_25748.adoc  A_25758.adoc  A_25760.adoc  A_25761.adoc  A_25762.adoc  A_25767.adoc  A_25768.adoc  A_25782.adoc  A_25783.adoc  A_26104.adoc  A_26281.adoc  A_26477.adoc  A_26492-01.adoc  A_26493.adoc  (+39 more)
docs/asciidoc/chapters/: 01_testplan_identifier.adoc  02_referenzen.adoc  03_einleitung.adoc  05_zu_testende_merkmale.adoc  06_nicht_zu_testende_merkmale.adoc  99_anhang.adoc
docs/asciidoc/tables/: product_implementation.csv
docs/asciidoc/testaspekte/: readme.adoc
docs/scripts/: README.md  pyproject.toml
docs/scripts/src/testsuite_docs/: zeta_afos.py
docs/scripts/src/testsuite_docs/traceability/: __main__.py  builder.py  models.py
tiger/: defaults.yaml  eRezeptTestData.yaml  paths.yaml  testdata.yaml
(+308 files in other folders)
